# Mobile_Robotics

./: .gitignore  _config.yml  index.md  sync_ws.sh
project/: report1.md  report2.md  report3.md
ros2_ws/interbotix_xslocobot_descriptions/: CMakeLists.txt  package.xml
ros2_ws/interbotix_xslocobot_descriptions/launch/: gazebo.launch.py  view_robot.launch.py
ros2_ws/interbotix_xslocobot_descriptions/rviz/: locobot_ros2.rviz
ros2_ws/interbotix_xslocobot_descriptions/urdf/: lidar.urdf.xacro  pan_and_tilt.urdf.xacro
ros2_ws/interbotix_xslocobot_descriptions/urdf/kobuki_version/: locobot_kobuki.urdf.xacro
ros2_ws/interbotix_xslocobot_descriptions/worlds/: ball.sdf  locobot_world.sdf
ros2_ws/locobot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/locobot_gazebo/config/: locobot_nav.rviz  nav2_params.yaml
ros2_ws/locobot_gazebo/launch/: locobot_gazebo.launch.py  nav2.launch.py  throw_controller.launch.py
ros2_ws/locobot_gazebo/worlds/: locobot_world.sdf
ros2_ws/locobot_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/locobot_nodes/locobot_nodes/: arm_grasp.py  arm_home.py  arm_throw_node.py  auto_navigator.py  ball_detection.py  base_alignment.py  beacon_localization.py  ee_logger.py  gz_lidar_sim.py  joint_state_to_gz.py  odom_tf_broadcaster.py  throw_controller_node.py
